--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,23 +42,23 @@ android {
     task decodeOSRS(type: JavaExec) {
         classpath = files('./apktool_2.4.1.jar')
         main = 'brut.apktool.Main'
-        args 'd','-f','./osrs_189.1.apk'
+        args 'd','-f','./osrs.apk'
     }
 
     task patchOSRS(type: Copy) {
         from file("./app-debug/smali_classes2/com/osiris/")
-        into file("./osrs_189.1/smali/com/osiris/")
+        into file("./osrs/smali/com/osiris/")
     }
 
     task replaceManifest(type: Copy) {
         from file("./AndroidManifest.xml")
-        into file("./osrs_189.1/")
+        into file("./osrs/")
     }
 
     task assembleOsiris(type: JavaExec) {
         classpath = files('./apktool_2.4.1.jar')
         main = 'brut.apktool.Main'
-        args 'b','-f','./osrs_189.1/'
+        args 'b','-f','./osrs/'
     }
 
     task deleteOldDebug(type: Delete) {
@@ -68,7 +68,7 @@ android {
     task testSignAPK(type: JavaExec) {
         classpath = files('./signapk-1.0.jar')
         main = 'orig.SignApk'
-        args 'testkey.x509.pem','testkey.pk8','./osrs_189.1/dist/osrs_189.1.apk','./build/outputs/apk/debug/app-debug.apk'
+        args 'testkey.x509.pem','testkey.pk8','./osrs/dist/osrs.apk','./build/outputs/apk/debug/app-debug.apk'
     }
 
     afterEvaluate {
